--- a/docs/src/styles.css
+++ b/docs/src/styles.css
@@ -13,7 +13,10 @@ blockquote > p {
     margin: 0 0 0 10px;
 }
 
-hr {
+table {
+    margin: 0;
+}
+hr {margin: 0;
     height: 2px;
     background-color: var(--quote-border);
     border: none;
